...

struct ContentView: View {
    
    // Constants
    private let moviesNavigationTitle = "Movies"
    private let noMoreResultsText = "No more results"
    private let searchFieldPrompt = "Search movies"
    
    @StateObject private var movieListVM = MovieListViewModel()
    @FocusState private var isSearchFieldFocused: Bool
    
    var body: some View {
        NavigationView {
...
